--- a/app/src/main/res/layout/fragment_parenthood.xml
+++ b/app/src/main/res/layout/fragment_parenthood.xml
@@ -34,6 +34,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title"/>
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_event"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_event"
+            tools:listitem="@layout/item_rv_event"/>
+
         <TextView
             android:id="@+id/tv_article"
             android:layout_width="wrap_content"
@@ -43,7 +52,7 @@
             android:layout_margin="30dp"
             android:text="Artikel"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_event"/>
+            app:layout_constraintTop_toBottomOf="@id/rv_event"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_article"
